# youbot_applications

./: repository.debs  repository.rosinstall  stack.xml
android_app_pc_client/: CMakeLists.txt  README.txt  manifest.xml
android_app_pc_client/src/: androidCommandEncrypt.h  androidCommandEncrypt.hpp  main.cpp
diagnostics_tool/: CMakeLists.txt  README.txt  manifest.xml
diagnostics_tool/src/: YouBotDiagnostics.cpp  YouBotDiagnostics.h  main.cpp
hello_world_demo/: CMakeLists.txt  README.txt  manifest.xml
hello_world_demo/src/: main.cpp
joint_configurator/: .gitignore  CMakeLists.txt  manifest.xml
joint_configurator/config/: arm-1-protected.cfg  arm-1.cfg  arm-2-protected.cfg  arm-2.cfg  arm-3-protected.cfg  arm-3.cfg  arm-4-protected.cfg  arm-4.cfg  arm-5-protected.cfg  arm-5.cfg  arm-joint-parameters.cfg  arm-protected-joint-parameters3.cfg  arm-protected-joint-parameters5.cfg  arm.cfg  base-joint-parameters.cfg  base-protected-joint-parameters.cfg  base-protected.cfg  base.cfg  protected-joint-parameter.cfg
joint_configurator/src/: ArmConfigurator.cpp  BaseConfigurator.cpp  JointConfigurator.cpp  JointConfigurator.hpp  JointConfiguratorMain.cpp
joypad_control/: CMakeLists.txt  manifest.xml
joypad_control/config/: youbot-joypad.cfg
joypad_control/src/: YouBotJoypad.cpp  YouBotJoypad.hpp  main.cpp
keyboard_remote_control/: CMakeLists.txt  manifest.xml
keyboard_remote_control/src/: main.cpp
